[tool.black]
line-length = 120
target-version = ['py38', 'py39']

[tool.isort]
profile = "black"

[tool.poetry]
name = "travel-guide-llm"
version = "0.1.0"
description = "A new Python project"
authors = ["Glaadiss <bartekgladys@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.13"
langchain = "^0.3.3"
langchain-openai = "^0.2.2"
langchain-pinecone = "^0.2.0"
streamlit = "^1.39.0"
langchain-community = "^0.3.2"
pypdf = "^5.0.1"
pytesseract = "^0.3.13"
pdf2image = "^1.17.0"
pillow = "^10.4.0"
pypdf2 = "^3.0.1"
duckduckgo-search = "^6.3.0"
pyowm = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
